--- a/index.html
+++ b/index.html
@@ -1394,9 +1394,9 @@ document.addEventListener("DOMContentLoaded", function() {
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{yuan2024identity,
-  title={Identity-Preserving Text-to-Video Generation by Frequency Decomposition},
-  author={Yuan, Shenghai and Huang, Jinfa and He, Xianyi and Ge, Yunyuan and Shi, Yujun and Chen, Liuhan and Luo, Jiebo and Yuan, Li},
+    <pre><code>@article{Proteus-ID,
+  title={Proteus-ID: ID-Consistent and Motion-Coherent Video Customization},
+  author={Guiyu Zhang},
   journal={arXiv preprint arXiv:2411.17440},
   year={2024}
 }</code></pre>
