--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                    class="external-link button is-normal is-rounded is-dark"
                         style="font-size: 18px; padding: 12px 24px;">
                   <span class="icon">
-                      <i class="fas fa-file-pdf"></i>
+                      <i class="fab fa-github"></i>
                   </span>
                   <span>Code</span>
                 </a>
