--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
               <video poster="" id="shiba" autoplay controls muted loop playsinline>
                 <source src="static\assets\visual_results\13.mp4" type="video/mp4">
               </video>
-              <p></p>A young woman with brown hair, wearing a beige shirt under a white sweater, remains mostly stationary throughout the video, with only subtle head movements and slight shifts in gaze. Her expression appears contemplative and slightly concerned, adding to the overall calm yet serious atmosphere of the scene. Set in what seems to be an indoor environment, possibly a home or office, the background features neutral-colored walls and minimalistic decor. The soft and natural lighting enhances the serene ambiance, while there is no significant change in her position or any noticeable camera movement affecting the view, keeping the focus firmly on her reflective demeanor.
+              <p></p>A young woman with brown hair, wearing a beige shirt under a white sweater, remains mostly stationary throughout the video, with only subtle head movements and slight shifts in gaze ... Set in what seems to be an indoor environment, possibly a office or ...  
             </div>
             <div class="video-item">
               <video poster="" id="fullbody" autoplay controls muted loop playsinline>
@@ -694,13 +694,13 @@
               <video poster="" id="blueshirt" autoplay controls muted loop playsinline>
                 <source src="static\assets\visual_results\15.mp4" type="video/mp4">
               </video>
-              <p></p>A young man with short dark hair, wearing glasses with blue frames and dressed in a white shirt, stands in front of a microphone, speaking into it with an animated expression that conveys his enthusiasm. As he delivers his speech, he raises his right fist in a gesture of emphasis or excitement before lowering it back down, all while his body remains mostly stationary and facing forward towards the camera. The background is adorned with colorful posters and drawings, indicating that this is likely an indoor event or gathering. With bright lighting that highlights him clearly against the vibrant backdrop, the atmosphere feels lively and engaging, perfectly complementing his passionate delivery.
+              <p></p>A young man with short dark hair, wearing glasses with black frames and dressed in a white shirt, stands in front of a microphone ... As he delivers his speech, he raises his right fist ... The background is adorned with colorful posters and drawings ...
             </div>
             <div class="video-item">
               <video poster="" id="mask" autoplay controls muted loop playsinline>
                 <source src="static\assets\visual_results\16.mp4" type="video/mp4">
               </video>
-              <p></p>A woman with dark hair, wearing a sparkling pink dress, holds a microphone in one hand and a red envelope in the other, moving slightly as she speaks or sings. Her expression is cheerful and engaging, indicating that she is addressing an audience. Throughout the sequence, there is no significant change in her position or camera movement, maintaining focus on her actions. The background features a vibrant red design with bold patterns, which enhances the festive atmosphere. The lighting beautifully highlights her and the objects she holds, creating a warm and inviting scene that complements her lively presence.
+              <p></p>A woman with dark hair, wearing a sparkling pink dress, holds a microphone in one hand ... Her expression is cheerful and engaging, indicating that she is addressing an audience ... The background features a vibrant red design with bold patterns ...
             </div>
           </div>
         </div>
