--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
               <img src="static\assets\comparison\4.png" alt="Overview Image" class="overview-image" style="max-width: 80%; height: auto; object-fit: contain;">
             </div>
             <div class="description-container" style="position: relative; left: -55px; top: 0px;">
-              <p class="overview-description">A relaxed man with a captivating smile, navigating through an underwater environment in a sophisticated diving suit with gold and black accents. He confidently gestures with black leather gloves. Red rock formations create a dramatic backdrop around him ...</p>
+              <p class="overview-description">A relaxed man with a captivating smile, navigating through an underwater environment in a sophisticated diving suit with gold and black accents. He confidently gestures with black leather gloves. Red rock formations create a dramatic backdrop ...</p>
             </div>
           </div>
 
