--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="http://127.0.0.1:5500/index.html"
+                <a href="https://github.com/grenoble-zhang/Proteus-ID"
                    class="external-link button is-normal is-rounded is-dark"
                         style="font-size: 18px; padding: 12px 24px;">
                   <span class="icon">
