--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="http://127.0.0.1:5500/index.html"
+                <a href="https://grenoble-zhang.github.io/Proteus-ID/"
                    class="external-link button is-normal is-rounded is-dark"
                    style="font-size: 18px; padding: 12px 24px;">
                   <span class="icon">
