--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@ document.addEventListener("DOMContentLoaded", function() {
     <h2 class="title">BibTeX</h2>
     <pre><code>@article{Proteus-ID,
   title={Proteus-ID: ID-Consistent and Motion-Coherent Video Customization},
-  author={Guiyu Zhang},
+  author={Guiyu Zhang, Chen Shi, Zijian Jiang, Xunzhi Xiang, Jingjing Qian, Shaoshuai Shi, Li Jiang},
   year={2025}
 }</code></pre>
   </div>
