--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 <div class="media-wrapper">
                   <video class="media-content animator-video" 
                          style="transform: translateX(65px);" 
-                         autoplay controls muted loop playsinline>
+                         autoplay muted loop playsinline>
                     <source src="static\assets\comparison\1-animator.mp4" type="video/mp4">
                   </video>
                 </div>
@@ -239,14 +239,14 @@
               </div>
 
               <div class="video-item">
-                <video class ="ConsisID-video" autoplay controls muted loop playsinline>
+                <video class ="ConsisID-video" autoplay muted loop playsinline>
                   <source src="static\assets\comparison\1-consisid.mp4" type="video/mp4">
                 </video>
                 <p class="bottom-text">ConsisID</p>
               </div>
 
               <div class="video-item">
-                <video class = "FantasyID-video" autoplay controls muted loop playsinline>
+                <video class="FantasyID-video" autoplay muted loop playsinline>
                   <source src="static\assets\comparison\1-fantasy.mp4" type="video/mp4">
                 </video>
                 <p class="bottom-text" style="font-size: 25px; color: #333;">FantasyID</p>
@@ -256,21 +256,21 @@
 
             <div class="video-row">
               <div class="video-item">
-                <video class = "Concat-video" autoplay controls muted loop playsinline>
+                <video class = "Concat-video" autoplay muted loop playsinline>
                   <source src="static\assets\comparison\1-concat.mp4" type="video/mp4">
                 </video>
                 <p class="bottom-text">Concat-ID</p>
               </div>
 
               <div class="video-item">
-                <video class = "EchoVideo-video" autoplay controls muted loop playsinline>
+                <video class = "EchoVideo-video" autoplay muted loop playsinline>
                   <source src="static\assets\comparison\1-echo.mp4" type="video/mp4">
                 </video>
                 <p class="bottom-text">EchoVideo</p>
               </div>
 
               <div class="video-item">
-                <video class = "Proteus-video" autoplay controls muted loop playsinline>
+                <video class = "Proteus-video" autoplay muted loop playsinline>
                   <source src="static\assets\comparison\1-ours.mp4" type="video/mp4">
                 </video>
                 <p class="bottom-text">Proteus-ID</p>
@@ -300,7 +300,7 @@
                 <div class="media-wrapper">
                   <video class="media-content animator-video" 
                          style="transform: translateX(75px);" 
-                         autoplay controls muted loop playsinline>
+                         autoplay muted loop playsinline>
                     <source src="static\assets\comparison\2-animator.mp4" type="video/mp4">
                   </video>
                 </div>
@@ -308,14 +308,14 @@
               </div>
 
               <div class="video-item">
-                <video class ="ConsisID-video" autoplay controls muted loop playsinline>
+                <video class ="ConsisID-video" autoplay muted loop playsinline>
                   <source src="static\assets\comparison\2-consisid.mp4" type="video/mp4">
                 </video>
                 <p class="bottom-text">ConsisID</p>
               </div>
 
               <div class="video-item">
-                <video class = "FantasyID-video" autoplay controls muted loop playsinline>
+                <video class = "FantasyID-video" autoplay muted loop playsinline>
                   <source src="static\assets\comparison\2-fantasy.mp4" type="video/mp4">
                 </video>
                 <p class="bottom-text" style="font-size: 25px; color: #333;">FantasyID</p>
@@ -325,21 +325,21 @@
 
             <div class="video-row">
               <div class="video-item">
-                <video class = "Concat-video" autoplay controls muted loop playsinline>
+                <video class = "Concat-video" autoplay muted loop playsinline>
                   <source src="static\assets\comparison\2-concat.mp4" type="video/mp4">
                 </video>
                 <p class="bottom-text">Concat-ID</p>
               </div>
 
               <div class="video-item">
-                <video class = "EchoVideo-video" autoplay controls muted loop playsinline>
+                <video class = "EchoVideo-video" autoplay muted loop playsinline>
                   <source src="static\assets\comparison\2-echo.mp4" type="video/mp4">
                 </video>
                 <p class="bottom-text">EchoVideo</p>
               </div>
 
               <div class="video-item">
-                <video class = "Proteus-video" autoplay controls muted loop playsinline>
+                <video class = "Proteus-video" autoplay muted loop playsinline>
                   <source src="static\assets\comparison\2-ours.mp4" type="video/mp4">
                 </video>
                 <p class="bottom-text">Proteus-ID</p>
@@ -379,7 +379,7 @@
                 <div class="media-wrapper">
                   <video class="media-content animator-video" 
                          style="transform: translateX(75px);" 
-                         autoplay controls muted loop playsinline>
+                         autoplay muted loop playsinline>
                     <source src="static\assets\comparison\3-animator.mp4" type="video/mp4">
                   </video>
                 </div>
@@ -387,14 +387,14 @@
               </div>
 
               <div class="video-item">
-                <video class ="ConsisID-video" autoplay controls muted loop playsinline>
+                <video class ="ConsisID-video" autoplay muted loop playsinline>
                   <source src="static\assets\comparison\3-consisid.mp4" type="video/mp4">
                 </video>
                 <p class="bottom-text">ConsisID</p>
               </div>
 
               <div class="video-item">
-                <video class = "FantasyID-video" autoplay controls muted loop playsinline>
+                <video class = "FantasyID-video" autoplay muted loop playsinline>
                   <source src="static\assets\comparison\3-fantasy.mp4" type="video/mp4">
                 </video>
                 <p class="bottom-text" style="font-size: 25px; color: #333;">FantasyID</p>
@@ -404,21 +404,21 @@
 
             <div class="video-row">
               <div class="video-item">
-                <video class = "Concat-video" autoplay controls muted loop playsinline>
+                <video class = "Concat-video" autoplay muted loop playsinline>
                   <source src="static\assets\comparison\3-concat.mp4" type="video/mp4">
                 </video>
                 <p class="bottom-text">Concat-ID</p>
               </div>
 
               <div class="video-item">
-                <video class = "EchoVideo-video" autoplay controls muted loop playsinline>
+                <video class = "EchoVideo-video" autoplay muted loop playsinline>
                   <source src="static\assets\comparison\3-echo.mp4" type="video/mp4">
                 </video>
                 <p class="bottom-text">EchoVideo</p>
               </div>
 
               <div class="video-item">
-                <video class = "Proteus-video" autoplay controls muted loop playsinline>
+                <video class = "Proteus-video" autoplay muted loop playsinline>
                   <source src="static\assets\comparison\3-ours.mp4" type="video/mp4">
                 </video>
                 <p class="bottom-text">Proteus-ID</p>
@@ -447,7 +447,7 @@
               <div class="media-wrapper">
                 <video class="media-content animator-video" 
                        style="transform: translateX(75px);" 
-                       autoplay controls muted loop playsinline>
+                       autoplay muted loop playsinline>
                   <source src="static\assets\comparison\4-animator.mp4" type="video/mp4">
                 </video>
               </div>
@@ -455,14 +455,14 @@
             </div>
 
             <div class="video-item">
-              <video class ="ConsisID-video" autoplay controls muted loop playsinline>
+              <video class ="ConsisID-video" autoplay muted loop playsinline>
                 <source src="static\assets\comparison\4-consisid.mp4" type="video/mp4">
               </video>
               <p class="bottom-text">ConsisID</p>
             </div>
 
             <div class="video-item">
-              <video class = "FantasyID-video" autoplay controls muted loop playsinline>
+              <video class = "FantasyID-video" autoplay muted loop playsinline>
                 <source src="static\assets\comparison\4-fantasy.mp4" type="video/mp4">
               </video>
               <p class="bottom-text" style="font-size: 25px; color: #333;">FantasyID</p>
@@ -472,21 +472,21 @@
 
           <div class="video-row">
             <div class="video-item">
-              <video class = "Concat-video" autoplay controls muted loop playsinline>
+              <video class = "Concat-video" autoplay muted loop playsinline>
                 <source src="static\assets\comparison\4-concat.mp4" type="video/mp4">
               </video>
               <p class="bottom-text">Concat-ID</p>
             </div>
 
             <div class="video-item">
-              <video class = "EchoVideo-video" autoplay controls muted loop playsinline>
+              <video class = "EchoVideo-video" autoplay muted loop playsinline>
                 <source src="static\assets\comparison\4-echo.mp4" type="video/mp4">
               </video>
               <p class="bottom-text">EchoVideo</p>
             </div>
 
             <div class="video-item">
-              <video class = "Proteus-video" autoplay controls muted loop playsinline>
+              <video class = "Proteus-video" autoplay muted loop playsinline>
                 <source src="static\assets\comparison\4-ours.mp4" type="video/mp4">
               </video>
               <p class="bottom-text">Proteus-ID</p>
@@ -537,25 +537,25 @@
 
           <div class="videos-grid">
             <div class="video-item">
-              <video poster="" id="shiba" autoplay controls muted loop playsinline>
+              <video poster="" id="shiba" autoplay muted loop playsinline>
                 <source src="static\assets\visual_results\1.mp4" type="video/mp4">
               </video>
               <p></p>A beautiful woman with delicate features and serene composure, dressed in stylish casual attire, strolls through European cobblestone streets as golden sunlight ... while coffee shop patrons nearby enjoy their leisurely moments.  </p>
             </div>
             <div class="video-item">
-              <video poster="" id="fullbody" autoplay controls muted loop playsinline>
+              <video poster="" id="fullbody" autoplay muted loop playsinline>
                 <source src="static\assets\visual_results\2.mp4" type="video/mp4">
               </video>
               <p></p>A man in a modern spacesuit with glowing accents, slowly turning his head from left to right, gazing out from the viewport of a crystalline spacecraft, distant nebulae and cosmic phenomena illuminating his contemplative expression.
             </div>
             <div class="video-item">
-              <video poster="" id="blueshirt" autoplay controls muted loop playsinline>
+              <video poster="" id="blueshirt" autoplay muted loop playsinline>
                 <source src="static\assets\visual_results\3.mp4" type="video/mp4">
               </video>
               <p></p>A man with chiseled jawline ... dressed in an immaculate white suit, strolling through an exotic marketplace in a desert city. His gaze shifts slightly as he walks, the golden afternoon light casting shadows throughout the bazaar.
             </div>
             <div class="video-item">
-              <video poster="" id="mask" autoplay controls muted loop playsinline>
+              <video poster="" id="mask" autoplay muted loop playsinline>
                 <source src="static\assets\visual_results\4.mp4" type="video/mp4">
               </video>
               <p></p>A mystical woman with long, wavy brown hair and enigmatic violet eyes, adorned in a robe of shimmering indigo silk with celestial patterns, standing atop a windswept cliff at dawn, her hands raised as if to summon the rising sun.
@@ -584,25 +584,25 @@
 
           <div class="videos-grid">
             <div class="video-item">
-              <video poster="" id="shiba" autoplay controls muted loop playsinline>
+              <video poster="" id="shiba" autoplay muted loop playsinline>
                 <source src="static\assets\visual_results\5.mp4" type="video/mp4">
               </video>
               <p></p>In an indoor setting characterized by a plain white wall adorned with minimal decor such as a small yellow sign and a thermostat, a young woman with long black hair, bangs, and light makeup, dressed in a light black blouse, stands mostly stationary ...
             </div>
             <div class="video-item">
-              <video poster="" id="fullbody" autoplay controls muted loop playsinline>
+              <video poster="" id="fullbody" autoplay muted loop playsinline>
                 <source src="static\assets\visual_results\6.mp4" type="video/mp4">
               </video>
               <p></p>A distinguished gentleman with gray hair, dressed in a white shirt, tending to potted plants in a garden area. He kneels beside the greenery, carefully examining the foliage, adjusting positioning of the plants with practiced hands.
             </div>
             <div class="video-item">
-              <video poster="" id="blueshirt" autoplay controls muted loop playsinline>
+              <video poster="" id="blueshirt" autoplay muted loop playsinline>
                 <source src="static\assets\visual_results\7.mp4" type="video/mp4">
               </video>
               <p></p>A young man with dark wavy hair, dressed in a black polo shirt, sitting at a desk while working on a computer. He appears deeply focused on the screen before him, occasionally shifting his hand toward the mouse or keyboard. The warm wooden door in ...
             </div>
             <div class="video-item">
-              <video poster="" id="mask" autoplay controls muted loop playsinline>
+              <video poster="" id="mask" autoplay muted loop playsinline>
                 <source src="static\assets\visual_results\8.mp4" type="video/mp4">
               </video>
               <p></p>A serene woman with gentle eyes and relaxed demeanor, walking through an art gallery holding a program guide. She is dressed in simple, elegant light-colored clothes and walking ... space against a backdrop of colorful artwork displayed in wooden frames ...
@@ -632,25 +632,25 @@
 
           <div class="videos-grid">
             <div class="video-item">
-              <video poster="" id="shiba" autoplay controls muted loop playsinline>
+              <video poster="" id="shiba" autoplay muted loop playsinline>
                 <source src="static\assets\visual_results\9.mp4" type="video/mp4">
               </video>
               <p></p>A woman with shoulder-length brown hair, dressed in a light beige sweater and blue jeans, carefully selecting fresh produce at an outdoor farmers market. She holds leafy greens, occasionally tilting her head with a pleased expression ...
             </div>
             <div class="video-item">
-              <video poster="" id="fullbody" autoplay controls muted loop playsinline>
+              <video poster="" id="fullbody" autoplay muted loop playsinline>
                 <source src="static\assets\visual_results\10.mp4" type="video/mp4">
               </video>
               <p></p>A sophisticated man with classical features and poised movements, dressed in a dark suit, walking through a spacious hall with white walls. He moves slowly and purposefully, without paying attention to the surroundings.
             </div>
             <div class="video-item">
-              <video poster="" id="blueshirt" autoplay controls muted loop playsinline>
+              <video poster="" id="blueshirt" autoplay muted loop playsinline>
                 <source src="static\assets\visual_results\11.mp4" type="video/mp4">
               </video>
               <p></p>A man in flowing scholarly robes walking between towering bookshelves in an ancient library, reaching up to grasp a floating tome while whispering an incantation that makes magical particles spiral around his outstretched hand.
             </div>
             <div class="video-item">
-              <video poster="" id="mask" autoplay controls muted loop playsinline>
+              <video poster="" id="mask" autoplay muted loop playsinline>
                 <source src="static\assets\visual_results\12.mp4" type="video/mp4">
               </video>
               <p></p>A serene woman with gentle eyes and relaxed demeanor, feeding birds in a tranquil Japanese garden, her simple elegant outfit harmonizing with the setting as she extends her hand with seeds, causing birds to gather around her.
@@ -679,25 +679,25 @@
 
           <div class="videos-grid">
             <div class="video-item">
-              <video poster="" id="shiba" autoplay controls muted loop playsinline>
+              <video poster="" id="shiba" autoplay muted loop playsinline>
                 <source src="static\assets\visual_results\13.mp4" type="video/mp4">
               </video>
               <p></p>A young woman with brown hair, wearing a beige shirt under a white sweater, remains mostly stationary throughout the video, with only subtle head movements and slight shifts in gaze ... Set in what seems to be an indoor environment, possibly a office or ...  
             </div>
             <div class="video-item">
-              <video poster="" id="fullbody" autoplay controls muted loop playsinline>
+              <video poster="" id="fullbody" autoplay muted loop playsinline>
                 <source src="static\assets\visual_results\14.mp4" type="video/mp4">
               </video>
               <p></p>A middle-aged man with short brown hair sits at a table with a microphone in front of him … The setting clearly suggests a press conference environment, as evidenced by the backdrop featuring logos from various sponsors such as Adidas and others.
             </div>
             <div class="video-item">
-              <video poster="" id="blueshirt" autoplay controls muted loop playsinline>
+              <video poster="" id="blueshirt" autoplay muted loop playsinline>
                 <source src="static\assets\visual_results\15.mp4" type="video/mp4">
               </video>
               <p></p>A young man with short dark hair, wearing glasses with black frames and dressed in a white shirt, stands in front of a microphone ... As he delivers his speech, he raises his right fist ... The background is adorned with colorful posters and drawings ...
             </div>
             <div class="video-item">
-              <video poster="" id="mask" autoplay controls muted loop playsinline>
+              <video poster="" id="mask" autoplay muted loop playsinline>
                 <source src="static\assets\visual_results\16.mp4" type="video/mp4">
               </video>
               <p></p>A woman with dark hair, wearing a sparkling pink dress, holds a microphone in one hand ... Her expression is cheerful and engaging, indicating that she is addressing an audience ... The background features a vibrant red design with bold patterns ...
