--- a/index.html
+++ b/index.html
@@ -851,11 +851,14 @@ document.addEventListener("DOMContentLoaded", function() {
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{Proteus-ID,
+    <pre><code>
+@article{zhang2025proteus,
   title={Proteus-ID: ID-Consistent and Motion-Coherent Video Customization},
-  author={Guiyu Zhang, Chen Shi, Zijian Jiang, Xunzhi Xiang, Jingjing Qian, Shaoshuai Shi, Li Jiang},
+  author={Zhang, Guiyu and Shi, Chen and Jiang, Zijian and Xiang, Xunzhi and Qian, Jingjing and Shi, Shaoshuai and Jiang, Li},
+  journal={arXiv preprint arXiv:2506.23729},
   year={2025}
-}</code></pre>
+}
+</code></pre>
   </div>
 </section>
 
