--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             <div class="author-row">
               <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=NLPMoeAAAAAJ">Guiyu Zhang</a><sup>1</sup>,</span>
+                <a href="https://grenoble-zhang.github.io/">Guiyu Zhang</a><sup>1</sup>,</span>
               <span class="author-block">
                 <a href="https://scholar.google.com.hk/citations?user=o-K_AoYAAAAJ&hl=en">Chen Shi</a><sup>1</sup>,</span>
                 <span class="author-block">
